--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,9 +32,9 @@ jobs:
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        feature: [default]
+    # strategy:
+    #   matrix:
+    #     feature: [default]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
       - name: Install Rust toolchain
@@ -44,7 +44,8 @@ jobs:
           components: clippy
       - uses: Swatinem/rust-cache@23bce251a8cd2ffc3c1075eaa2367cf899916d84 # v2
       - name: Run clippy
-        run: cargo clippy --all-targets --features ${{ matrix.feature }} -- -D warnings
+        # run: cargo clippy --all-targets --features ${{ matrix.feature }} -- -D warnings
+        run: cargo clippy --all-targets -- -D warnings
 
   test:
     name: Test
@@ -52,7 +53,7 @@ jobs:
     strategy:
       matrix:
         rust: [stable]
-        feature: [default]
+        # feature: [default]
         job:
           - os: macos-latest
           - os: ubuntu-latest
@@ -75,7 +76,8 @@ jobs:
           toolchain: stable
       - uses: Swatinem/rust-cache@23bce251a8cd2ffc3c1075eaa2367cf899916d84 # v2
       - name: Run Cargo Test
-        run: cargo test -r --all-targets --features ${{ matrix.feature }} --workspace
+        # run: cargo test -r --all-targets --features ${{ matrix.feature }} --workspace
+        run: cargo test -r --all-targets --workspace
 
   docs:
     name: Build docs
