--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["crates/core"]
 
 [package]
 name = "pace-rs"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["the pace-rs team"]
 categories = ["command-line-utilities"]
 edition = "2021"
@@ -11,6 +11,8 @@ keywords = ["cli"]
 license = "AGPL-3.0-or-later"
 repository = "https://github.com/pace-rs/pace"
 description = "pace - timetracking for the command line"
+
+exclude = ["assets/8th-logo.png"]
 
 [package.metadata.wix]
 upgrade-guid = "4D6D5C4F-3994-423F-9D4C-2F92C580F54B"
