--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -10,5 +10,12 @@ repository = "https://github.com/pace-rs/pace"
 description = "pace-core - library to support timetracking on the command line"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+include = [
+  "LICENSE",
+  "README.md",
+  "CHANGELOG.md",
+  "src/**/*",
+  "Cargo.toml",
+]
 
 [dependencies]
