--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -19,3 +19,21 @@ include = [
 ]
 
 [dependencies]
+async-condvar-fair = "1.0.0"
+chrono = { version = "0.4.33", features = ["serde"] }
+derive-getters = "0.3.0"
+futures = "0.3.30"
+log = "0.4.20"
+rusqlite = { version = "0.30.0", features = ["bundled", "chrono", "uuid"] }
+serde = "1.0.196"
+serde_derive = "1.0.196"
+strum = "0.26.1"
+strum_macros = "0.26.1"
+thiserror = "1.0.56"
+tokio = { version = "1.36.0", features = ["sync", "rt", "rt-multi-thread", "time"] }
+toml = { version = "0.8.10", features = ["indexmap", "preserve_order"] }
+typed-builder = "0.18.1"
+uuid = { version = "1.7.0", features = ["serde", "fast-rng", "v7"] }
+
+[dev-dependencies]
+rstest = "0.18.2"
