chore: fix version for pace_core
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = ["crates/core"]
 
 [workspace.dependencies]
-pace_core = { path = "crates/core" }
+pace_core = { path = "crates/core", version = "0" }
 
 [package]
 name = "pace-rs"
