--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ eula = false
 [dependencies]
 chrono = { version = "0.4.33", features = ["serde"] }
 clap = "4"
+clap_complete = "4.5.0"
 eyre = "0.6.12"
 pace_core = { workspace = true }
 serde = "1"
