--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ eula = false
 chrono = { version = "0.4.33", features = ["serde"] }
 clap = "4"
 clap_complete = "4.5.0"
+directories = "5.0.1"
 eyre = "0.6.12"
 pace_core = { workspace = true }
 serde = "1"
@@ -47,7 +48,9 @@ version = "0.7.0"
 
 [dev-dependencies]
 abscissa_core = { version = "0.7.0", features = ["testing"] }
+assert_cmd = "2.0.13"
 once_cell = "1.19"
+predicates = "3.1.0"
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
