--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ abscissa_core = { version = "0.7.0", features = ["testing"] }
 assert_cmd = "2.0.13"
 once_cell = "1.19"
 predicates = "3.1.0"
+tempfile = "3.10.0"
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
