--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ eula = false
 [dependencies]
 chrono = { version = "0.4.33", features = ["serde"] }
 clap = "4"
+clap_complete = "4.5.0"
+directories = "5.0.1"
 eyre = "0.6.12"
 pace_core = { workspace = true }
 serde = "1"
@@ -46,7 +48,10 @@ version = "0.7.0"
 
 [dev-dependencies]
 abscissa_core = { version = "0.7.0", features = ["testing"] }
+assert_cmd = "2.0.13"
 once_cell = "1.19"
+predicates = "3.1.0"
+tempfile = "3.10.0"
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
