--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -21,8 +21,10 @@ include = [
 [dependencies]
 async-condvar-fair = "1.0.0"
 chrono = { version = "0.4.33", features = ["serde"] }
-derive-getters = "0.3.0"
+directories = "5.0.1"
 futures = "0.3.30"
+getset = "0.1.2"
+itertools = "0.12.1"
 log = "0.4.20"
 rusqlite = { version = "0.30.0", features = ["bundled", "chrono", "uuid"] }
 serde = "1.0.196"
