feat(commands): introduce new `pace craft setup` command to make onboarding easier
This commit marks a significant enhancement in the user experience for new and returning users of the pace CLI tool. By introducing the `pace craft setup` command, we've streamlined the onboarding process, making it more intuitive, guided, and less daunting for users setting up pace for the first time or customizing their existing setup.

Key Features Introduced:
- Interactive setup wizard: Guides users through the configuration process with clear, concise prompts, allowing for a personalized setup experience.
- Environment detection: Automatically detects and suggests optimal settings based on the user's environment, reducing manual configuration efforts.
- Customizable activity log path: Offers users the choice to specify a custom path for their activity log, with sensible defaults provided.
- Support for PACE_HOME: Integrates the use of the PACE_HOME environment variable, allowing users to define a custom home directory for pace configurations.

These improvements will significantly enhance the onboarding experience, encouraging more users to adopt pace as their go-to productivity tool.

Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
-members = ["crates/core"]
+members = ["crates/cli", "crates/core"]
 
 [workspace.dependencies]
+pace_cli = { path = "crates/cli", version = "0" }
 pace_core = { path = "crates/core", version = "0" }
 
 [package]
@@ -33,12 +34,15 @@ eula = false
 chrono = { version = "0.4.33", features = ["serde"] }
 clap = "4"
 clap_complete = "4.5.0"
+dialoguer = { version = "0.11.0", features = ["history", "fuzzy-select"] }
 directories = "5.0.1"
 eyre = "0.6.12"
+pace_cli = { workspace = true }
 pace_core = { workspace = true }
 serde = "1"
 serde_derive = "1"
 thiserror = "1.0.56"
+toml = { version = "0.8.10", features = ["preserve_order"] }
 
 [dependencies.abscissa_core]
 version = "0.7.0"
