fix(data): apply fixes to example data for making the tests pass again
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/data/activity_2024-02.toml
+++ b/data/activity_2024-02.toml
@@ -2,69 +2,57 @@
 id = "018d9086-4028-7a41-a084-48d386cab766"
 category = "MyCategory::SubCategory"
 description = "This is my task description"
-start_date = "2024-02-10"
-start_time = "01:58:54"
+begin = "2024-02-10T01:58:54"
 kind = "activity"
 
 [[activities]]
 id = "018d9086-35a3-7e56-b2f7-7d3b50045fb2"
 category = "MyCategory::SubCategory"
 description = "This is my task description"
-start_date = "2024-02-10"
-start_time = "01:58:51"
+begin = "2024-02-10T01:58:51"
 kind = "activity"
 
 [[activities]]
 id = "018d9086-2f8f-7c9d-b94c-2ff4ba96aabc"
 category = "MyCategory::SubCategory"
 description = "This is my task description"
-start_date = "2024-02-10"
-start_time = "01:58:50"
+begin = "2024-02-10T01:58:50"
 kind = "activity"
 
 [[activities]]
 id = "018d9065-7020-7ee8-a14b-f92b23078479"
 category = "MyCategory::SubCategory"
 description = "This is my task description"
-start_date = "2024-02-10"
-start_time = "01:23:03"
+begin = "2024-02-10T01:23:03"
 kind = "activity"
 
 [[activities]]
 id = "018d84a4-f5d0-7dd8-a170-c8febe6d93e4"
 category = "intermission"
-end_date = "2024-02-04"
-end_time = "00:15:00"
-start_date = "2024-02-03"
-start_time = "22:30:00"
+end = "2024-02-04T00:15:00"
+begin = "2024-02-03T22:30:00"
 kind = "intermission"
 
 [[activities]]
 id = "018d84a5-03f4-755a-943a-5572a846f347"
 category = "design::pace"
 description = "Initial design process and requirements analysis."
-end_date = "2024-02-04"
-end_time = "00:15:00"
-start_date = "2024-02-03"
-start_time = "22:30:00"
+end = "2024-02-04T00:15:00"
+begin = "2024-02-03T22:30:00"
 kind = "task"
 
 [[activities]]
 id = "018d84a5-134a-7809-803b-7017ae638055"
 category = "development::pace"
 description = "Implemented the login feature."
-end_date = "2024-02-04"
-end_time = "10:30:00"
-start_date = "2024-02-04"
-start_time = "09:00:00"
+end = "2024-02-04T10:30:00"
+begin = "2024-02-04T09:00:00"
 kind = "task"
 
 [[activities]]
 id = "018d84a5-233f-7f41-b0a7-535c76b85afc"
 category = "research::pace"
 description = "Researched secure authentication methods."
-end_date = "2024-02-04"
-end_time = "12:00:00"
-start_date = "2024-02-04"
-start_time = "11:00:00"
+end = "2024-02-04T12:00:00"
+begin = "2024-02-04T11:00:00"
 kind = "task"
