--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -20,9 +20,55 @@ include = [
 ]
 
 [dependencies]
+chrono = "0.4.34"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 eyre = "0.6.12"
 getset = "0.1.2"
 pace_core = { workspace = true }
 tracing = { version = "0.1.40", features = ["log"] }
 typed-builder = "0.18.1"
+
+[lints.rust]
+unsafe_code = "forbid"
+missing_docs = "warn"
+rust_2018_idioms = "warn"
+trivial_casts = "warn"
+unused_lifetimes = "warn"
+unused_qualifications = "warn"
+bad_style = "warn"
+dead_code = "warn"
+improper_ctypes = "warn"
+# missing_copy_implementations = "warn"
+# missing_debug_implementations = "warn"
+non_shorthand_field_patterns = "warn"
+no_mangle_generic_items = "warn"
+overflowing_literals = "warn"
+path_statements = "warn"
+patterns_in_fns_without_body = "warn"
+trivial_numeric_casts = "warn"
+unused_results = "warn"
+unused_extern_crates = "warn"
+unused_import_braces = "warn"
+unconditional_recursion = "warn"
+unused = "warn"
+unused_allocation = "warn"
+unused_comparisons = "warn"
+unused_parens = "warn"
+while_true = "warn"
+
+[lints.clippy]
+# pedantic = "warn"
+# nursery = "warn"
+enum_glob_use = "warn"
+correctness = "warn"
+suspicious = "warn"
+complexity = "warn"
+perf = "warn"
+cast_lossless = "warn"
+default_trait_access = "warn"
+doc_markdown = "warn"
+manual_string_new = "warn"
+match_same_arms = "warn"
+semicolon_if_nothing_returned = "warn"
+trivially_copy_pass_by_ref = "warn"
+module_name_repetitions = "allow"
