--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -22,12 +22,14 @@ include = [
 [dependencies]
 async-condvar-fair = "1.0.0"
 chrono = { version = "0.4.34", features = ["serde"] }
+delegate = "0.12.0"
 directories = "5.0.1"
 displaydoc = "0.2.4"
 futures = "0.3.30"
 getset = "0.1.2"
 itertools = "0.12.1"
 log = "0.4.20"
+merge = "0.1.0"
 rusqlite = { version = "0.30.0", features = ["bundled", "chrono", "uuid"] }
 serde = "1.0.196"
 serde_derive = "1.0.196"
