--- a/release-plz.toml
+++ b/release-plz.toml
@@ -17,5 +17,29 @@ git_tag_enable = false
 # but we want to publish the crate to crates.io
 publish = true
 
+# only internal
+[[package]]
+name = "xtask"
+changelog_update = false
+git_release_enable = false
+git_tag_enable = false
+semver_check = false
+publish = false
+
 [changelog]
 protect_breaking_commits = true
+body = """
+## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
+
+{% for group, commits in commits | group_by(attribute="group") %}
+### {{ group | upper_first }}
+
+{% for commit in commits %}
+{%- if commit.scope -%}
+- *({{commit.scope}})* {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message }}{%- if commit.links %} ({% for link in commit.links %}[{{link.text}}]({{link.href}}) {% endfor -%}){% endif %}
+{% else -%}
+- {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message }}
+{% endif -%}
+{% endfor -%}
+{% endfor %}"#;
+"""
