config: fix body in changelog for release-plz
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/release-plz.toml
+++ b/release-plz.toml
@@ -41,5 +41,5 @@ body = """
 - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message }}
 {% endif -%}
 {% endfor -%}
-{% endfor %}"#;
+{% endfor %}
 """
