--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -26,6 +26,7 @@ getset = "0.1.2"
 itertools = "0.12.1"
 log = "0.4.20"
 merge = "0.1.0"
+rayon = "1.8.1"
 rusqlite = { version = "0.30.0", features = ["bundled", "chrono", "uuid"] }
 serde = "1.0.197"
 serde_derive = "1.0.197"
