--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,12 @@ on:
   merge_group:
     types: [checks_requested]
 
+# If new code is pushed to a PR branch, then cancel in progress workflows for that PR. Ensures that
+# we don't waste CI time, and returns results quicker https://github.com/jonhoo/rust-ci-conf/pull/5
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   fmt:
     name: Rustfmt
@@ -33,30 +39,31 @@ jobs:
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
-    # strategy:
-    #   matrix:
-    #     feature: [default]
+    strategy:
+      matrix:
+        # Get early warning of new lints which are regularly introduced in beta channels.
+        toolchain: [stable, beta]
     steps:
       - uses: actions/checkout@v4 # v4
 
-      - name: Install Rust toolchain
+      - name: Install Rust ${{ matrix.toolchain }}
         uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ matrix.toolchain }}
           components: clippy
           
       - uses: Swatinem/rust-cache@v2
       - name: Run clippy
-        # run: cargo clippy --all-targets --features ${{ matrix.feature }} -- -D warnings
         run: cargo clippy --all-targets -- -D warnings
 
   test:
     name: Test
     runs-on: ${{ matrix.job.os }}
     strategy:
+      fail-fast: false
       matrix:
-        rust: [stable]
-        # feature: [default]
+        # Get early warning of new lints which are regularly introduced in beta channels.
+        toolchain: [stable, beta]
         job:
           - os: macos-latest
           - os: ubuntu-latest
@@ -73,10 +80,10 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
-      - name: Install Rust toolchain
+      - name: Install Rust ${{ matrix.toolchain }}
         uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ matrix.toolchain }}
       - uses: Swatinem/rust-cache@v2
       - name: Run Cargo Test
         # run: cargo test -r --all-targets --features ${{ matrix.feature }} --workspace
@@ -107,10 +114,54 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
       - uses: Swatinem/rust-cache@v2
-      - name: Run Cargo Doc
+
+      - name: cargo doc
         run: cargo doc --no-deps --all-features --workspace --examples
+        env:
+          RUSTDOCFLAGS: --cfg docsrs
+        
+  msrv:
+    name: Check MSRV
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        crate: [pace-rs, pace_core, pace_cli]
+        msrv: [1.74.1]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install ${{ matrix.msrv }}
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ matrix.msrv }}
+
+      - name: Install cargo-hack
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-hack
+
+      - name: Run Cargo Hack
+        run: cargo hack check --rust-version -p ${{ matrix.crate }}
+
+  powerset:
+    # cargo-hack checks combinations of feature flags to ensure that features are all additive
+    # which is required for feature unification
+    runs-on: ubuntu-latest
+    name: ubuntu / stable / features
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Install stable
+        uses: dtolnay/rust-toolchain@stable
+      - name: cargo install cargo-hack
+        uses: taiki-e/install-action@cargo-hack
+      # intentionally no target specifier; see https://github.com/jonhoo/rust-ci-conf/pull/4
+      # --feature-powerset runs for every combination of features
+      - name: cargo hack
+        run: cargo hack --feature-powerset check
 
   result:
     name: Result (CI)
@@ -120,6 +171,8 @@ jobs:
       - clippy
       - test
       - docs
+      - msrv
+      - powerset
     steps:
       - name: Mark the job as successful
         run: exit 0
