--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ eyre = "0.6.12"
 pace_cli = { path = "crates/cli", version = "0" }
 pace_core = { path = "crates/core", version = "0" }
 pace_server = { path = "crates/server", version = "0" }
+similar-asserts = { version = "1.5.0", features = ["serde"] }
 
 [package]
 name = "pace-rs"
@@ -54,6 +55,7 @@ pace_cli = { workspace = true }
 pace_core = { workspace = true }
 serde = "1"
 serde_derive = "1"
+
 thiserror = "1.0.57"
 toml = { version = "0.8.10", features = ["preserve_order"] }
 
@@ -68,6 +70,7 @@ abscissa_core = { version = "0.7.0", features = ["testing"] }
 assert_cmd = "2.0.14"
 once_cell = "1.19"
 predicates = "3.1.0"
+similar-asserts = { workspace = true }
 tempfile = "3.10.0"
 
 # The profile that 'cargo dist' will build with
