chore: feature gate rusqlite for better compile times
rusqlite is used for SQLite support in the future, currently we focus on implementing the Toml storage with SQLite as another supported backend in the future. Hence we feature gate it for now and not using it as a default feature.

Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -19,8 +19,9 @@ include = [
 ]
 
 # TODO!: Use features for adding optional dependencies for testing and merging etc.
-# [features]
-# default = []
+[features]
+default = []
+sqlite = ["dep:rusqlite"]
 # testing = ["dep:arbitrary"]
 
 [dependencies]
@@ -32,7 +33,7 @@ itertools = "0.12.1"
 log = "0.4.20"
 merge = "0.1.0"
 rayon = "1.8.1"
-rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "uuid"] }
+rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "uuid"], optional = true }
 serde = "1.0.197"
 serde_derive = "1.0.197"
 strum = "0.26.1"
