feat(config): some config changes for better clarity and usability
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,8 @@
 [build]
 rustdocflags = ["--document-private-items"]
 # rustflags = "-C target-cpu=native -D warnings"
-rustflags = ["-Dwarnings"]
-# incremental = true
+# rustflags = ["-Dwarnings"]
+incremental = false
 
 [alias]
 xtask = "run --package xtask --"
