--- a/config/tasks.pace.toml
+++ b/config/tasks.pace.toml
@@ -11,8 +11,8 @@ title = "Implement feature X"
 created_at = "2024-02-04T12:34:56"
 finished_at = "2024-02-05T13:34:56"
 description = "Detailed description of feature X to be implemented."
-priority = "High"
-status = "Pending"
+priority = "high"
+status = "pending"
 tags = ["feature", "X"]
 
 [[tasks]]
@@ -20,6 +20,6 @@ id = "01HPY7F03JQ6SJF5C97H7G7E0E"
 title = "Fix bug Y"
 created_at = "2024-02-06T12:34:56"
 description = "Detailed description of bug Y to be fixed."
-priority = "Medium"
-status = "InProgress"
+priority = "medium"
+status = "wip"
 tags = ["bug", "Y"]
