refactor: utilize ActivityEndOptions for better testability and overall usability
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,9 @@ pace_core = { workspace = true }
 serde = "1"
 serde_derive = "1"
 
+# Better error messages for Serde
+# serde_path_to_error = "0.1.15"
+
 thiserror = "1.0.57"
 toml = { version = "0.8.10", features = ["preserve_order"] }
 
