--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,8 @@
 [build]
 rustdocflags = ["--document-private-items"]
 # rustflags = "-C target-cpu=native -D warnings"
-rustflags = "-D warnings"
-# incremental = true
+# rustflags = ["-Dwarnings"]
+incremental = false
 
 [alias]
 xtask = "run --package xtask --"
