--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ eyre = "0.6.12"
 pace_cli = { path = "crates/cli", version = "0" }
 pace_core = { path = "crates/core", version = "0" }
 pace_server = { path = "crates/server", version = "0" }
+similar-asserts = { version = "1.5.0", features = ["serde"] }
 
 [package]
 name = "pace-rs"
@@ -50,10 +51,15 @@ dialoguer = { version = "0.11.0", features = ["history", "fuzzy-select"] }
 directories = "5.0.1"
 eyre = { workspace = true }
 human-panic = "1.2.3"
+insta = { version = "1.35.1", features = ["toml"] }
 pace_cli = { workspace = true }
 pace_core = { workspace = true }
 serde = "1"
 serde_derive = "1"
+
+# Better error messages for Serde
+# serde_path_to_error = "0.1.15"
+
 thiserror = "1.0.57"
 toml = { version = "0.8.10", features = ["preserve_order"] }
 
@@ -68,6 +74,7 @@ abscissa_core = { version = "0.7.0", features = ["testing"] }
 assert_cmd = "2.0.14"
 once_cell = "1.19"
 predicates = "3.1.0"
+similar-asserts = { workspace = true }
 tempfile = "3.10.0"
 
 # The profile that 'cargo dist' will build with
@@ -144,15 +151,15 @@ assets = [
   { source = "target/release/pace", dest = "/usr/bin/pace", mode = "0755", config = false, doc = false }, # user = "root", group = "root" },
 ]
 
-[lints.rust]
+[workspace.lints.rust]
 unsafe_code = "forbid"
-missing_docs = "warn"
+# missing_docs = "warn"
 rust_2018_idioms = "warn"
 trivial_casts = "warn"
 unused_lifetimes = "warn"
 unused_qualifications = "warn"
 bad_style = "warn"
-dead_code = "warn"
+dead_code = "allow" # TODO: "warn"
 improper_ctypes = "warn"
 # missing_copy_implementations = "warn"
 # missing_debug_implementations = "warn"
@@ -172,7 +179,7 @@ unused_comparisons = "warn"
 unused_parens = "warn"
 while_true = "warn"
 
-[lints.clippy]
+[workspace.lints.clippy]
 # pedantic = "warn"
 # nursery = "warn"
 enum_glob_use = "warn"
