--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -18,6 +18,12 @@ include = [
   "Cargo.toml",
 ]
 
+# TODO!: Use features for adding optional dependencies for testing and merging etc.
+[features]
+default = []
+sqlite = ["dep:rusqlite"]
+# testing = ["dep:arbitrary"]
+
 [dependencies]
 chrono = { version = "0.4.34", features = ["serde"] }
 directories = "5.0.1"
@@ -26,7 +32,8 @@ getset = "0.1.2"
 itertools = "0.12.1"
 log = "0.4.20"
 merge = "0.1.0"
-rusqlite = { version = "0.30.0", features = ["bundled", "chrono", "uuid"] }
+rayon = "1.8.1"
+rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "uuid"], optional = true }
 serde = "1.0.197"
 serde_derive = "1.0.197"
 strum = "0.26.1"
@@ -34,52 +41,11 @@ strum_macros = "0.26.1"
 thiserror = "1.0.57"
 toml = { version = "0.8.10", features = ["indexmap", "preserve_order"] }
 typed-builder = "0.18.1"
-uuid = { version = "1.7.0", features = ["serde", "fast-rng", "v7"] }
+ulid = { version = "1.1.2", features = ["serde"] }
 
 [dev-dependencies]
 rstest = "0.18.2"
+similar-asserts = { workspace = true }
 
-[lints.rust]
-unsafe_code = "forbid"
-missing_docs = "allow" # TODO!: For now, we allow missing docs, but we should fix this
-rust_2018_idioms = "warn"
-trivial_casts = "warn"
-unused_lifetimes = "warn"
-unused_qualifications = "warn"
-bad_style = "warn"
-dead_code = "allow" # TODO!: For now, we allow dead code, but we should fix this
-improper_ctypes = "warn"
-# missing_copy_implementations = "warn"
-# missing_debug_implementations = "warn"
-non_shorthand_field_patterns = "warn"
-no_mangle_generic_items = "warn"
-overflowing_literals = "warn"
-path_statements = "warn"
-patterns_in_fns_without_body = "warn"
-trivial_numeric_casts = "warn"
-unused_results = "warn"
-unused_extern_crates = "warn"
-unused_import_braces = "warn"
-unconditional_recursion = "warn"
-unused = "warn"
-unused_allocation = "warn"
-unused_comparisons = "warn"
-unused_parens = "warn"
-while_true = "warn"
-
-[lints.clippy]
-# pedantic = "warn"
-# nursery = "warn"
-enum_glob_use = "warn"
-correctness = "warn"
-suspicious = "warn"
-complexity = "warn"
-perf = "warn"
-cast_lossless = "warn"
-default_trait_access = "warn"
-doc_markdown = "warn"
-manual_string_new = "warn"
-match_same_arms = "warn"
-semicolon_if_nothing_returned = "warn"
-trivially_copy_pass_by_ref = "warn"
-module_name_repetitions = "allow"
+[lints]
+workspace = true
