ci: update cargo-dist and add homebrew support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,11 +85,11 @@ lto = "thin"
 # Config for 'cargo dist'
 [workspace.metadata.dist]
 # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
-cargo-dist-version = "0.10.0"
+cargo-dist-version = "0.11.1"
 # CI backends to support
 ci = ["github"]
 # The installers to generate for each app
-installers = ["shell", "powershell", "msi"]
+installers = ["shell", "powershell", "homebrew", "msi"]
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = [
   "aarch64-apple-darwin",
@@ -100,6 +100,10 @@ targets = [
 ]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
+# A GitHub repo to push Homebrew formulas to
+tap = "pace-rs/homebrew-tap"
+# Publish jobs to run in CI
+publish-jobs = ["homebrew"]
 
 # see: https://nnethercote.github.io/perf-book/build-configuration.html
 [profile.dev]
