--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -36,7 +36,7 @@ rayon = "1.8.1"
 rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "uuid"], optional = true }
 serde = "1.0.197"
 serde_derive = "1.0.197"
-strum = "0.26.1"
+strum = { version = "0.26.1", features = ["derive"] }
 strum_macros = "0.26.1"
 thiserror = "1.0.57"
 toml = { version = "0.8.10", features = ["indexmap", "preserve_order"] }
