--- a/config/tasks.pace.toml
+++ b/config/tasks.pace.toml
@@ -5,8 +5,7 @@
 # TODO: IDs are optional and can be generated with the `pace id`(??? is that sensible, or something else?) command.
 # TODO: Add a `pace tasks init` command to generate a new project configuration file.
 
-[[tasks]]
-id = "01HPY7H596FT2R880SEKH7KN25"
+[01HPY7H596FT2R880SEKH7KN25]
 title = "Implement feature X"
 created_at = "2024-02-04T12:34:56"
 finished_at = "2024-02-05T13:34:56"
@@ -15,8 +14,7 @@ priority = "high"
 status = "pending"
 tags = ["feature", "X"]
 
-[[tasks]]
-id = "01HPY7F03JQ6SJF5C97H7G7E0E"
+[01HPY7F03JQ6SJF5C97H7G7E0E]
 title = "Fix bug Y"
 created_at = "2024-02-06T12:34:56"
 description = "Detailed description of bug Y to be fixed."
