--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -32,6 +32,7 @@ getset = "0.1.2"
 itertools = "0.12.1"
 log = "0.4.20"
 merge = "0.1.0"
+miette = { version = "7.1.0", features = ["fancy"] }
 rayon = "1.8.1"
 rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "uuid"], optional = true }
 serde = "1.0.197"
