--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -33,6 +33,7 @@ itertools = "0.12.1"
 log = "0.4.20"
 merge = "0.1.0"
 miette = { version = "7.1.0", features = ["fancy"] }
+parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
 rayon = "1.8.1"
 rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "uuid"], optional = true }
 serde = "1.0.197"
