--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ directories = "5.0.1"
 eyre = { workspace = true }
 human-panic = "1.2.3"
 insta = { version = "1.35.1", features = ["toml"] }
+open = "5.0.2"
 pace_cli = { workspace = true }
 pace_core = { workspace = true }
 serde = "1"
