--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -31,6 +31,7 @@ chrono = { version = "0.4.34", features = ["serde"] }
 clap = { workspace = true, optional = true }
 directories = "5.0.1"
 displaydoc = "0.2.4"
+enum_dispatch = "0.3.12"
 getset = "0.1.2"
 itertools = "0.12.1"
 log = "0.4.20"
