--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ version = "0.7.0"
 [dev-dependencies]
 abscissa_core = { version = "0.7.0", features = ["testing"] }
 assert_cmd = "2.0.14"
+insta-cmd = "0.5.0"
 once_cell = "1.19"
 predicates = "3.1.0"
 similar-asserts = { workspace = true }
