--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,6 +89,7 @@ jobs:
           toolchain: ${{ matrix.toolchain }}
       - uses: Swatinem/rust-cache@v2
       - name: Run Cargo Test
+        id: run_tests
         # run: cargo test -r --all-targets --features ${{ matrix.feature }} --workspace
         run: cargo test -r --all-targets --workspace
         env:
