--- a/tests/fixtures/project1/subproject-c/tasks.toml
+++ b/tests/fixtures/project1/subproject-c/tasks.toml
@@ -1,4 +1,4 @@
-[[task]]
+[[tasks]]
 id = "018d84a2-9648-74d8-9543-60af7f1a8bc9"
 title = "Implement feature X"
 created_at = "2024-02-04T12:34:56"
@@ -8,7 +8,7 @@ priority = "High"
 status = "Pending"
 tags = ["feature", "X"]
 
-[[task]]
+[[tasks]]
 id = "018d84a2-b1b2-768c-9aa4-b78c7cacfea4"
 title = "Fix bug Y"
 created_at = "2024-02-06T12:34:56"
