refactor(time): implement more time based functionality and add more testing (#71)
* WIP

Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

* test: move fixtures dir to root tests directory

Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

* refactor: implement more time conversion for date based grouping

Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

* fix: clippy

Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

* refactor: use new chrono:TimeDelta instead of deprecated Duration

Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

---------

Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -27,7 +27,7 @@ clap = ["dep:clap"]
 # testing = ["dep:arbitrary"]
 
 [dependencies]
-chrono = { version = "0.4.35", features = ["serde"] }
+chrono = { workspace = true }
 clap = { workspace = true, optional = true }
 directories = "5.0.1"
 displaydoc = "0.2.4"
@@ -52,6 +52,7 @@ ulid = { version = "1.1.2", features = ["serde"] }
 
 [dev-dependencies]
 insta = { version = "1.36.1", features = ["toml", "redactions"] }
+pace_testing = { workspace = true }
 rstest = "0.18.2"
 similar-asserts = { workspace = true }
 
