--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [workspace]
-members = ["crates/cli", "crates/core", "crates/server", "xtask"]
+members = [
+  "crates/cli",
+  "crates/core",
+  "crates/server",
+  "crates/testing",
+  "xtask",
+]
 
 [workspace.package]
 authors = ["the pace-rs team"]
@@ -10,10 +16,12 @@ license = "AGPL-3.0-or-later"
 repository = "https://github.com/pace-rs/pace"
 
 [workspace.dependencies]
+chrono = { version = "0.4.35", features = ["serde"] }
 clap = { version = "4", features = ["env", "wrap_help", "derive"] }
 eyre = "0.6.12"
 pace_cli = { path = "crates/cli", version = "0" }
 pace_core = { path = "crates/core", version = "0" }
+pace_testing = { path = "crates/testing", version = "0" }
 similar-asserts = { version = "1.5.0", features = ["serde"] }
 
 [package]
