chore: protect breaking commits in git-cliff
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/cliff.toml
+++ b/cliff.toml
@@ -71,7 +71,7 @@ commit_preprocessors = [
   { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
-protect_breaking_commits = false
+protect_breaking_commits = true
 # filter out the commits that are not matched by commit parsers
 filter_commits = false
 # regex for matching git tags
